https://github.com/yuya-tanaka-yt/and-ha_renewal.git

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
 
       <div class="service-container">
         <div class="service-item">
-          <div>
+          <div class="service-img">
             <img class="service-img-ill1" src="img/ill.png" alt="戦略">
           </div>
           <figcaption class="service-lead">
@@ -200,7 +200,9 @@
         </div>
 
         <div class="service-item">
-          <img class="service-img-ill2" src="img/ill02.png" alt="企画・設計">
+          <div class="service-img">
+            <img class="service-img-ill2" src="img/ill02.png" alt="企画・設計">
+          </div>
           <figcaption class="service-lead">
             <div class="service-head">
               <p class="service-p">企画・設計</p>
@@ -212,7 +214,9 @@
         </div>
 
         <div class="service-item">
-          <img class="service-img-ill3" src="img/ill03.png" alt="制作・開発">
+          <div class="service-img">
+            <img class="service-img-ill3" src="img/ill03.png" alt="制作・開発">
+          </div>
           <figcaption class="service-lead">
             <div class="service-head">
               <p class="service-p">制作・開発</p>
@@ -224,7 +228,9 @@
         </div>
 
         <div class="service-item">
-          <img class="service-img-ill4" src="img/ill04.png" alt="サイト運用">
+          <div class="service-img">
+            <img class="service-img-ill4" src="img/ill04.png" alt="サイト運用">
+          </div>
           <figcaption class="service-lead">
             <div class="service-head">
               <p class="service-p">サイト運用</p>
@@ -403,7 +409,9 @@
       <div class="specialty-container">
 
         <div class="specialty-item">
-          <img class="specialty-img-ill1" src="img/specialty/ill_1.png" alt="コーポレートサイト制作">
+          <div class="specialty-img">
+            <img class="specialty-img-ill1" src="img/specialty/ill_1.png" alt="コーポレートサイト制作">
+          </div>
           <figcaption class="specialty-lead">
             <div class="specialty-head">
               <p class="specialty-p">コーポレートサイト制作</p>
@@ -415,7 +423,9 @@
         </div>
 
         <div class="specialty-item">
-          <img class="specialty-img-ill2" src="img/specialty/ill_2.png" alt="WEB/SNS広告">
+          <div class="specialty-img">
+            <img class="specialty-img-ill2" src="img/specialty/ill_2.png" alt="WEB/SNS広告">
+          </div>
           <figcaption class="specialty-lead">
             <div class="specialty-head">
               <p class="specialty-p">WEB / SNS広告</p>
@@ -427,7 +437,9 @@
         </div>
 
         <div class="specialty-item">
-          <img class="specialty-img-ill3" src="img/specialty/ill_3.png" alt="ECサイト制作">
+          <div class="specialty-img">
+            <img class="specialty-img-ill3" src="img/specialty/ill_3.png" alt="ECサイト制作">
+          </div>
           <figcaption class="specialty-lead">
             <div class="specialty-head">
               <p class="specialty-p">ECサイト制作</p>
@@ -439,7 +451,9 @@
         </div>
 
         <div class="specialty-item">
-          <img class="specialty-img-ill4" src="img/specialty/ill_4.png" alt="改善コンサルティング">
+          <div class="specialty-img">
+            <img class="specialty-img-ill4" src="img/specialty/ill_4.png" alt="改善コンサルティング">
+          </div>
           <figcaption class="specialty-lead">
             <div class="specialty-head">
               <p class="specialty-p">改善コンサルティング</p>
