https://github.com/yuya-tanaka-yt/and-ha_renewal.git

--- a/index.html
+++ b/index.html
@@ -17,17 +17,25 @@
 
 <body>
   <!--@media screen aside-->
-  <div>
-    <h1><a href="index.html"><img class="header-logo-img-aside" src="img/logo_andha.png" alt=And-HA></a></h1>
-  </div>
-
   <input id="menu" type="checkbox" />
-  <label for="menu" class="open">menu</label>
   <label for="menu" class="back"></label>
 
+  <div class="sp-header">
+    <h1>
+      <a href="index.html"><img class="header-logo-img-aside" src="img/logo_andha.png" alt=And-HA></a>
+    </h1>
+    <div class="menu-btn">
+      <label for="menu" class="open">
+        <a class="menu-trigger">
+          <span class="menu-border"></span>
+          <span class="menu-border"></span>
+          <span class="menu-border"></span>
+        </a>
+      </label>
+    </div>
+  </div>
 
   <aside> 
-    <label for="menu" class="close">close</label>
     <div class="aside-wrapper">
       <nav class="aside-nav">
         <ul class="aside-ul">
